fixes for cover picture on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -181,6 +181,7 @@ figure.cover {
             margin-bottom: 25px;
             float: none;
             width: 100%;
+            height: auto;
             border: 0px;
         }
     }
